@@ -5,6 +5,7 @@ Babel 2.1.1-rc1
 - Added &resourceId parameter to BabelLinks snippet.
 - Added French translation for new keys from version 2.1.0-beta.
 - Added BabelTranslation snippet to get the id of a translated resource in a given context.
+- Fixed bug with empty babel settings (contextKeys and syncTvs).
 
 Babel 2.1.0-beta
 ==============
